Correct bit width and offset for USB0:HCCHAR:EC field

--- a/common_patches/usb0.yaml
+++ b/common_patches/usb0.yaml
@@ -269,3 +269,9 @@ _add:
         bitWidth: 32
         writeConstraint: [0, 0xffffffff]
         access: read-write
+
+"HCCHAR?":
+  _modify:
+    EC:
+      bitOffset: 20
+      bitWidth: 2
