--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -8,6 +8,10 @@ _add:
       - offset: 0x0
         size: 0x100
         usage: "Registers"
+    interrupts:
+      DMA_COPY:
+        description: DMA_COPY
+        value: 84
     registers:
       INT_RAW:
         description: "Raw interrupt status"
@@ -423,6 +427,10 @@ _add:
       - offset: 0x0
         size: 0x60
         usage: "Registers"
+    interrupts:
+      CRYPTO_DMA:
+        description: CRYPTO_DMA
+        value: 90
     registers:
       CONF:
         description: "DMA configuration register"
