Update `svdtools` (and other `xtask` dependencies)

--- a/esp32p4/svd/patches/esp32p4.yaml
+++ b/esp32p4/svd/patches/esp32p4.yaml
@@ -667,25 +667,7 @@ AHB_DMA:
 
 AXI_DMA:
   OUT_CONF0_CH?:
-    _modify:
-      OUT_RST_CH?:
-        name: OUT_RST_CH
-      OUT_RST_CHOUT_LOOP_TEST_CH?:
-        name: OUT_RST_CHOUT_LOOP_TEST_CH
-      OUT_LOOP_TEST_CHOUT_AUTO_WRBACK_CH?:
-        name: OUT_LOOP_TEST_CHOUT_AUTO_WRBACK_CH
-      OUT_AUTO_WRBACK_CHOUT_EOF_MODE_CH?:
-        name: OUT_AUTO_WRBACK_CHOUT_EOF_MODE_CH
-      OUT_EOF_MODE_CHOUT_ETM_EN_CH?:
-        name: OUT_EOF_MODE_CHOUT_ETM_EN_CH
-      OUT_ETM_EN_CHOUT_BURST_SIZE_SEL_CH?:
-        name: OUT_ETM_EN_CHOUT_BURST_SIZE_SEL_CH
-      OUT_BURST_SIZE_SEL_CHOUT_CMD_DISABLE_CH?:
-        name: OUT_BURST_SIZE_SEL_CHOUT_CMD_DISABLE_CH
-      OUT_CMD_DISABLE_CHOUT_ECC_AEC_EN_CH?:
-        name: OUT_CMD_DISABLE_CHOUT_ECC_AEC_EN_CH
-      OUT_ECC_AEC_EN_CHOUTDSCR_BURST_EN_CH?:
-        name: OUT_ECC_AEC_EN_CHOUTDSCR_BURST_EN_CH
+    _strip_end: "0"
 
   _expand_array:
     IN_INT_RAW_CH%s: {}
