--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -570,31 +570,31 @@ TWAI0:
 
   DATA*:
     _modify:
-      DATA_0:
+      "?~DATA_0":
         name: TX_BYTE_0
-      DATA_1:
+      "?~DATA_1":
         name: TX_BYTE_1
-      DATA_2:
+      "?~DATA_2":
         name: TX_BYTE_2
-      DATA_3:
+      "?~DATA_3":
         name: TX_BYTE_3
-      DATA_4:
+      "?~DATA_4":
         name: TX_BYTE_4
-      DATA_5:
+      "?~DATA_5":
         name: TX_BYTE_5
-      DATA_6:
+      "?~DATA_6":
         name: TX_BYTE_6
-      DATA_7:
+      "?~DATA_7":
         name: TX_BYTE_7
-      DATA_8:
+      "?~DATA_8":
         name: TX_BYTE_8
-      DATA_9:
+      "?~DATA_9":
         name: TX_BYTE_9
-      DATA_10:
+      "?~DATA_10":
         name: TX_BYTE_10
-      DATA_11:
+      "?~DATA_11":
         name: TX_BYTE_11
-      DATA_12:
+      "?~DATA_12":
         name: TX_BYTE_12
 
 ASSIST_DEBUG:
