Define MAC RST bit on C2, C3, S2, S3

--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -68,6 +68,17 @@ APB_CTRL:
     _modify:
       "*":
         modifiedWriteValues: oneToClear
+  WIFI_RST_EN:
+    _delete: WIFI_RST
+    _add:
+      MAC_RST:
+        description: "Set this bit to reset MAC module. Clear the bit to release MAC module."
+        bitOffset: 2
+        bitWidth: 1
+      BLE_RPA_RST:
+        description: "Set this bit to reset BLE RPA module. Clear the bit to release BLE RPA module."
+        bitOffset: 27
+        bitWidth: 1
 
 ECC:
   _include: ../../../common_patches/ecc_int_strip.yaml
