--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -469,3 +469,12 @@ RSA:
     _modify:
       INTERRUPT_ENA:
         name: INT_ENA
+
+APB_CTRL:
+  WIFI_RST_EN:
+    _delete: WIFI_RST
+    _add:
+      MAC_RST:
+        description: "Set this bit to reset MAC module. Clear the bit to release MAC module."
+        bitOffset: 2
+        bitWidth: 1
