--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -24,7 +24,7 @@ I2C0:
       name: INT_ST
   _include:
     - ../../../common_patches/i2c0.yaml
-    
+
 RTC_CNTL:
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
@@ -48,7 +48,7 @@ LEDC:
     _modify:
       OVF:
         name: TIMER0_OVF
-  _include: 
+  _include:
     - ../../../common_patches/ledc_collect.yaml
     - ../../../common_patches/ledc_int.yaml
 
@@ -68,6 +68,17 @@ APB_CTRL:
     _modify:
       "*":
         modifiedWriteValues: oneToClear
+  WIFI_RST_EN:
+    _delete: WIFI_RST
+    _add:
+      MAC_RST:
+        description: "Set this bit to reset MAC module. Clear the bit to release MAC module."
+        bitOffset: 2
+        bitWidth: 1
+      BLE_RPA_RST:
+        description: "Set this bit to reset BLE RPA module. Clear the bit to release BLE RPA module."
+        bitOffset: 27
+        bitWidth: 1
 
 ECC:
   _include: ../../../common_patches/ecc_int_strip.yaml
@@ -108,7 +119,7 @@ SPI2:
   _include: ../../../common_patches/spi_dma_int_strip.yaml
 
 SYSTIMER:
-  _include: 
+  _include:
     - ../../../common_patches/int_strip.yaml
     - ../../../common_patches/systimer.yaml
 
