--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -292,6 +292,318 @@ _add:
             bitOffset: 0
             bitWidth: 32
             access: read-write
+  I2C_ANA_MST:
+    description: I2C_ANA_MST Peripheral
+    baseAddress: 0x600AD800
+    addressBlock:
+      - offset: 0x0
+        size: 0x38
+        usage: "Registers"
+    registers:
+      I2C0_CTRL:
+        description: "I2C0_CTRL register"
+        addressOffset: 0x0
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_I2C0_CTRL : R/W; bitpos: [24:0]; default: 0
+          SLAVE_ADDR:
+            description: "Configures the slave address"
+            bitOffset: 0
+            bitWidth: 8
+          SLAVE_REG_ADDR:
+            description: "Configures the slave register address"
+            bitOffset: 8
+            bitWidth: 8
+          DATA:
+            description: "Configures the transmitted data"
+            bitOffset: 16
+            bitWidth: 8
+          READ_WRITE:
+            description: "Configures the read/write operation"
+            bitOffset: 24
+            bitWidth: 1
+          # I2C_MST_I2C0_BUSY : RO; bitpos: [25]; default: 0
+          BUSY:
+            description: "Represents whether I2C0 is currently transferring data"
+            bitOffset: 25
+            bitWidth: 1
+            access: read-only
+      I2C1_CTRL:
+        description: "I2C1_CTRL register"
+        addressOffset: 0x4
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_I2C1_CTRL : R/W; bitpos: [24:0]; default: 0
+          SLAVE_ADDR:
+            description: "Configures the slave address"
+            bitOffset: 0
+            bitWidth: 8
+          SLAVE_REG_ADDR:
+            description: "Configures the slave register address"
+            bitOffset: 8
+            bitWidth: 8
+          DATA:
+            description: "Configures the transmitted data"
+            bitOffset: 16
+            bitWidth: 8
+          READ_WRITE:
+            description: "Configures the read/write operation"
+            bitOffset: 24
+            bitWidth: 1
+          # I2C_MST_I2C1_BUSY : RO; bitpos: [25]; default: 0
+          BUSY:
+            description: "Represents whether I2C1 is currently transferring data"
+            bitOffset: 25
+            bitWidth: 1
+            access: read-only
+      I2C0_CONF:
+        description: "I2C0_CONF register"
+        addressOffset: 0x8
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_I2C0_CONF : R/W; bitpos: [23:0]; default: 0
+          CONF:
+            description: "?"
+            bitOffset: 0
+            bitWidth: 24
+          # I2C_MST_I2C0_STATUS : RO; bitpos: [31:24]; default: 0
+          STATUS:
+            description: "?"
+            bitOffset: 24
+            bitWidth: 8
+            access: read-only
+      I2C1_CONF:
+        description: "I2C1_CONF register"
+        addressOffset: 0xC
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_I2C1_CONF : R/W; bitpos: [23:0]; default: 0
+          CONF:
+            description: "?"
+            bitOffset: 0
+            bitWidth: 24
+          # I2C_MST_I2C1_STATUS : RO; bitpos: [31:24]; default: 0
+          STATUS:
+            description: "?"
+            bitOffset: 24
+            bitWidth: 8
+            access: read-only
+      BURST_CONF:
+        description: "BURST_CONF register"
+        addressOffset: 0x10
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_BURST_CTRL : R/W; bitpos: [31:0]; default: 0
+          BURST_CTRL:
+            description: "?"
+            bitOffset: 0
+            bitWidth: 32
+      BURST_STATUS:
+        description: "BURST_STATUS register"
+        addressOffset: 0x14
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_I2C_MST_BURST_DONE : RO; bitpos: [0]; default: 0
+          MST_BURST_DONE:
+            description: "?"
+            bitOffset: 0
+            bitWidth: 1
+            access: read-only
+          # I2C_MST_I2C_MST0_BURST_ERR_FLAG : RO; bitpos: [1]; default: 0
+          MST0_BURST_ERR:
+            description: "?"
+            bitOffset: 1
+            bitWidth: 1
+            access: read-only
+          # I2C_MST_I2C_MST1_BURST_ERR_FLAG : RO; bitpos: [2]; default: 0
+          MST1_BURST_ERR:
+            description: "?"
+            bitOffset: 2
+            bitWidth: 1
+            access: read-only
+          # I2C_MST_BURST_TIMEOUT_CNT : RO; bitpos: [19:3]; default: 0
+          TIMEOUT_CNT:
+            description: "?"
+            bitOffset: 3
+            bitWidth: 17
+            access: read-only
+      ANA_CONF0:
+        description: "ANA_CONF0 register"
+        addressOffset: 0x18
+        size: 32
+        access: read-write
+        resetValue: 0
+        fields:
+          # I2C_MST_ANA_CONF0 : R/W; bitpos: [23:0]; default: 0
+          BBPLL_STOP_FORCE_HIGH:
+            description: "?"
+            bitOffset: 2
+            bitWidth: 1
+          BBPLL_STOP_FORCE_LOW:
+            description: "?"
+            bitOffset: 3
+            bitWidth: 1
+          # I2C_MST_ANA_STATUS0 : RO; bitpos: [31:24]; default: 0
+          CAL_DONE:
+            description: "BBPLL calibration done"
+            bitOffset: 24
+            bitWidth: 1
+            access: read-only
+      ANA_CONF1:
+        description: "ANA_CONF1 register"
+        addressOffset: 0x1C
+        size: 32
+        access: read-write
+        resetValue: 0
+        fields:
+          # I2C_MST_ANA_CONF1 : R/W; bitpos: [23:0]; default: 0
+          BIAS_RD:
+            description: "Clear to select"
+            bitOffset: 6
+            bitWidth: 1
+          BBPLL_RD:
+            description: "Clear to select"
+            bitOffset: 7
+            bitWidth: 1
+          ULP_CAL_RD:
+            description: "Clear to select"
+            bitOffset: 8
+            bitWidth: 1
+          SAR_I2C_RD:
+            description: "Clear to select"
+            bitOffset: 9
+            bitWidth: 1
+          DIG_REG_RD:
+            description: "Clear to select"
+            bitOffset: 10
+            bitWidth: 1
+          BBPLL_PD:
+            description: "Clear to enable BBPLL"
+            bitOffset: 17
+            bitWidth: 1
+          SAR_FORCE_PD:
+            description: "?"
+            bitOffset: 18
+            bitWidth: 1
+          SAR_FORCE_PU:
+            description: "?"
+            bitOffset: 16
+            bitWidth: 1
+          # I2C_MST_ANA_STATUS1 : RO; bitpos: [31:24]; default: 0
+          STATUS:
+            description: "?"
+            bitOffset: 24
+            bitWidth: 8
+            access: read-only
+      ANA_CONF2:
+        description: "ANA_CONF2 register"
+        addressOffset: 0x20
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          # I2C_MST_ANA_CONF2 : R/W; bitpos: [23:0]; default: 0
+          BIAS_MST_SEL:
+            description: "Configures which I2C master the following analog modules uses. If the corresponding bit is set to 1, I2C0 master is used for communication; if set to 0, I2C1 master is used."
+            bitOffset: 8
+            bitWidth: 1
+          BBPLL_MST_SEL:
+            description: "Configures which I2C master the following analog modules uses. If the corresponding bit is set to 1, I2C0 master is used for communication; if set to 0, I2C1 master is used."
+            bitOffset: 9
+            bitWidth: 1
+          ULP_CAL_MST_SEL:
+            description: "Configures which I2C master the following analog modules uses. If the corresponding bit is set to 1, I2C0 master is used for communication; if set to 0, I2C1 master is used."
+            bitOffset: 10
+            bitWidth: 1
+          SAR_I2C_MST_SEL:
+            description: "Configures which I2C master the following analog modules uses. If the corresponding bit is set to 1, I2C0 master is used for communication; if set to 0, I2C1 master is used."
+            bitOffset: 11
+            bitWidth: 1
+          DIG_REG_MST_SEL:
+            description: "Configures which I2C master the following analog modules uses. If the corresponding bit is set to 1, I2C0 master is used for communication; if set to 0, I2C1 master is used."
+            bitOffset: 12
+            bitWidth: 1
+          SAR_FORCE_PD:
+            description: "?"
+            bitOffset: 18
+            bitWidth: 1
+          BBPLL_M:
+            description: "Clear to enable BBPLL"
+            bitOffset: 17
+            bitWidth: 1
+          SAR_FORCE_PU:
+            description: "?"
+            bitOffset: 16
+            bitWidth: 1
+          # I2C_MST_ANA_STATUS2 : RO; bitpos: [31:24]; default: 0
+          STATUS:
+            description: "?"
+            bitOffset: 24
+            bitWidth: 8
+            access: read-only
+      I2C0_CTRL1:
+        description: "I2C0_CTRL1 register"
+        addressOffset: 0x24
+        size: 32
+        access: read-write
+        resetValue: 0x42
+        fields:
+          # I2C_MST_I2C0_SCL_PULSE_DUR : R/W; bitpos: [5:0]; default: 2
+          SCL_PULSE_DUR:
+            description: "Configures the duration of the high-level period of the SCL driven by I2C0"
+            bitOffset: 0
+            bitWidth: 6
+          # I2C_MST_I2C0_SDA_SIDE_GUARD : R/W; bitpos: [10:6]; default: 1
+          SDA_SIDE_GUARD:
+            description: "Configures the duration of the low-level period of the SCL driven by I2C0"
+            bitOffset: 6
+            bitWidth: 5
+      I2C1_CTRL1:
+        description: "I2C1_CTRL1 register"
+        addressOffset: 0x28
+        size: 32
+        access: read-write
+        resetValue: 0x42
+        fields:
+          # I2C_MST_I2C1_SCL_PULSE_DUR : R/W; bitpos: [5:0]; default: 2
+          SCL_PULSE_DUR:
+            description: "Configures the duration of the high-level period of the SCL driven by I2C1"
+            bitOffset: 0
+            bitWidth: 6
+          # I2C_MST_I2C1_SDA_SIDE_GUARD : R/W; bitpos: [10:6]; default: 1
+          SDA_SIDE_GUARD:
+            description: "Configures the duration of the low-level period of the SCL driven by I2C1"
+            bitOffset: 6
+            bitWidth: 5
+      DATE:
+        description: "DATE register"
+        addressOffset: 0x34
+        size: 32
+        access: read-write
+        resetValue: 0x02201300
+        fields:
+          # I2C_MST_DATE : R/W; bitpos: [27:0]; default: 35656448
+          DATE:
+            description: "Version control register"
+            bitOffset: 0
+            bitWidth: 28
+          # I2C_MST_CLK_EN : R/W; bitpos: [28]; default: 0
+          CLK_EN:
+            description: "?"
+            bitOffset: 28
+            bitWidth: 1
 
 _modify:
   IEEE802154:
@@ -629,3 +941,8 @@ TWAI*:
     _modify:
       ERR_CAPTURE_CODE_DIRECTION:
         name: ECC_DIRECTION
+
+I2C_ANA_MST:
+  _array:
+    I2C?_CTRL: {}
+    I2C?_CTRL1: {}
