--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -385,6 +385,9 @@ INTPRI:
 PCNT:
   _include: ../../../common_patches/pcnt.yaml
 
+PCR:
+  _include: ../../../common_patches/pcr.yaml
+
 SPI[12]:
   _include: ../../../common_patches/spi_w.yaml
 
