--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -1409,6 +1409,17 @@ SPI0:
           bitOffset: 0
           bitWidth: 8
           access: read-write
+    CLOCK_GATE:
+      description: "SPI Memory Clock Gate Register"
+      addressOffset: 0xDC
+      size: 0x20
+      access: read-write
+      fields:
+        CLK_EN:
+          description: ""
+          bitOffset: 0
+          bitWidth: 1
+          access: read-write
   MISC:
     _delete: ["CS0_DIS", "CS1_DIS", "CS2_DIS", "CS3_DIS", "CS4_DIS", "CS5_DIS"]
     _add:
