esp32s2: Add the CLOCK_GATE enable field description from esp32s3 and run xtask

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -1416,7 +1416,7 @@ SPI0:
       access: read-write
       fields:
         CLK_EN:
-          description: ""
+          description: "Register clock gate enable signal. 1: Enable. 0. Disable."
           bitOffset: 0
           bitWidth: 1
           access: read-write
