Remove _HOLD suffix from PAD_HOLD fields

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -1344,6 +1344,8 @@ RTC_CNTL:
       name: INT_ENA
     INT_CLR_RTC:
       name: INT_CLR
+  PAD_HOLD:
+    _strip_end: _HOLD
   _include: ../../../common_patches/int_strip.yaml
 
 RTC_IO:
