Improve GPIO field name consistency (#330)
* Remove _HOLD_FORCE suffixes

* Remove _HOLD suffix from PAD_HOLD fields

* Remove X32P/N prefixes

* Remove PDAC1/2 prefixes

* Re-gen pacs

--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -160,8 +160,18 @@ RTC_IO:
   _array:
     TOUCH_PAD*:
       name: TOUCH_PAD%s
+  XTAL_32P_PAD:
+    _strip: "X32P_"
+  XTAL_32N_PAD:
+    _strip: "X32N_"
+  PAD_DAC1:
+    _strip: "PDAC1_"
+  PAD_DAC2:
+    _strip: "PDAC2_"
 
 RTC_CNTL:
+  PAD_HOLD:
+    _strip_end: _HOLD
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
 "EFUSE,I2S0,UART0,USB_DEVICE,SPI1,I2S1,PERI_BACKUP,SPI0":
