--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -1344,6 +1344,8 @@ RTC_CNTL:
       name: INT_ENA
     INT_CLR_RTC:
       name: INT_CLR
+  PAD_HOLD:
+    _strip_end: _HOLD
   _include: ../../../common_patches/int_strip.yaml
 
 RTC_IO:
@@ -1361,6 +1363,10 @@ RTC_IO:
     _modify:
       GPIO_OUT_DATA_W1TS:
         name: RTC_GPIO_OUT_DATA_W1TS
+  XTAL_32P_PAD:
+    _strip: "X32P_"
+  XTAL_32N_PAD:
+    _strip: "X32N_"
 
 "EFUSE,I2C0,I2S0,UART0,RTC_I2C":
   _include: ../../../common_patches/int_strip.yaml
