--- a/esp32s2/svd/patches/esp32s2-wifi.yaml
+++ b/esp32s2/svd/patches/esp32s2-wifi.yaml
@@ -88,9 +88,25 @@ WIFI:
                 registers:
                     DUMMY:
                         addressOffset: 0x0
+            CRYPTO_KEY_SLOT%s:
+                dim: 25
+                dimIncrement: 40
+                addressOffset: 0x1400
+                description: Cryptographic keys for MPDU encapsulation and decapsulation
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+            CRYPTO_CONTROL:
+                addressOffset: 0x400
+                description: Control registers for hardware crypto
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+
 _include:
-    - "../../../common_patches/wifi/rx.yaml"
-    - "../../../common_patches/wifi/rx_filter_masked.yaml"
-    - "../../../common_patches/wifi/tx.yaml"
-    - "../../../common_patches/wifi/mac_interrupt.yaml"
-    - "../../../common_patches/wifi/pwr_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/rx.yaml"
+    - "../../../common_patches/wifi/mac/rx_filter_masked.yaml"
+    - "../../../common_patches/wifi/mac/tx.yaml"
+    - "../../../common_patches/wifi/mac/mac_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/pwr_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/crypto.yaml"
